--- a/styles/speaking_partners.scss
+++ b/styles/speaking_partners.scss
@@ -29,12 +29,26 @@ h2.subsection {
 	font-weight:bold;
 }
 
+h5.green {
+	text-transform:uppercase;
+	letter-spacing:1px;
+	color:$green;
+}
+h6 {
+	text-transform:uppercase;
+	font-weight:200;
+	font-size:100%;
+	margin:15px 0 4px 0;
+	letter-spacing:1px;
+}
+
 @for $i from 1 through 7 {
 	h4.accordion-#{$i}{
 		background-color:lighten($darkgreen, $i*5);
 		display:block;
 		padding:20px 65px;
 		margin:0;
+		margin-bottom:0;
 		text-transform:uppercase;
 		letter-spacing:1px;
 		color:white;
@@ -70,6 +84,7 @@ h2.subsection {
 
 div.accordion {
 	display:none;
+	margin-top:10px;
 }
 
 .image-caption-1, .image-caption-2 {
@@ -90,7 +105,7 @@ div.accordion {
 	width:100%;	
 }
 
-.to-serve-box {
+.bullet-box {
 	background-color:#E5E9CE;
 	padding: 30px 35px;
 	h3 {
