--- a/styles/_sidebar.scss
+++ b/styles/_sidebar.scss
@@ -138,7 +138,7 @@ body {
 			display: none;
 			padding-left:.8em;
 			font-weight:normal;
-			text-transform:capitalize;
+			text-transform:none;
 			li {
 				&:last-child{
 					margin-bottom: 5px;
