--- a/styles/testimonials.css
+++ b/styles/testimonials.css
@@ -630,7 +630,7 @@ body {
   display: none;
   padding-left: .8em;
   font-weight: normal;
-  text-transform: capitalize;
+  text-transform: none;
 }
 #sidebar .nav .nav li:last-child {
   margin-bottom: 5px;
